--- a/assests/scss/layout.scss
+++ b/assests/scss/layout.scss
@@ -2,7 +2,12 @@
     margin: 0;
     text-align: center;
     #layout-main{
-        height: 37rem;
-        background-color: aqua;
+        position: relative;
+        height: auto;
+        
+        text-align:justify;
+        overflow: auto;
+
     }
 } 
+
