--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,6 @@
 <footer>
-    this is imported footer
+    <div id="brand-rights">
+        © Developer-surendra All rights reserved
+    </div>
+   
 </footer>
