--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,6 +1,8 @@
 <header>
-    this is imported header
-
+    
+   <div id="logo-name">
+     DEV Surii :)
+   </div>
 
 <ul>
     <% if (locals.user){ %>
