--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/posts.css">
     <%- style %>
 </head>
 <body>
@@ -15,14 +16,15 @@
     <%- include('_header'); %> 
    
           <main id="layout-main">
-        
-            <%- body %>
-      
+           <%- body %>
           </main>
-  
+               
 
-    
+        
     <%- include('_footer'); %>
+    
+    
+    
     <%- script %>
 </body>
 </html>
