--- a/assests/css/footer.css
+++ b/assests/css/footer.css
@@ -1,1 +1,14 @@
+footer {
+  display: flex;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: 5rem;
+  background-color: rgb(128, 191, 255);
+  opacity: 90%;
+}
 
+#brand-rights {
+  margin: 2rem;
+  font-size: 1.3rem;
+}
