--- a/assests/css/header.css
+++ b/assests/css/header.css
@@ -1,1 +1,35 @@
+header {
+  background-color: rgb(0, 38, 77);
+  display: flex;
+  justify-content: space-between;
+  height: 4rem;
+  padding: 0.8rem;
+}
+header ul {
+  display: flex;
+  margin: 2rem;
+  font-size: 2rem;
+  justify-content: space-evenly;
+}
+header ul li {
+  list-style-type: none;
+}
+header ul li a {
+  color: white;
+  margin: 1rem;
+  margin-bottom: 1rem;
+}
 
+#logo-name {
+  font-size: 3rem;
+  font-weight: 900;
+  color: white;
+}
+
+#post-list-container p {
+  height: auto;
+  width: 30%;
+  overflow: auto;
+  text-align: justify;
+  background-color: blue;
+}
