--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,25 @@
 
-<h1>codeial/ <%=title %></h1>
+<h1>codeial / <%=title %></h1>
 
 <section id="feed-posts">
 <h4>Posts</h4>
-<form action="" id="new-post-form" method="POST">
-    <textarea name="content"  cols="30" rows="3"></textarea>
-    <input type="submit" value="Post" >
+<form action="/posts/create" id="new-post-form" method="POST">
+    <textarea name="content"  cols="30" rows="3" placeholder="Type Here..."></textarea>
+    <input type="submit" value="Post">
 </form>
+<div id="post-list-container">
+    <ul>
+        <% for(post of posts) {%>
+            <li>
+                <p>
+                    <%= post.content %>
+                <br>
+                 <small>
+                    <%= post.user.name %>
+                 </small>
+                </p>
+            </li>
+            <% } %>
+    </ul>
+</div>
 </section
