added frineds list, deleting posts and comments for authorised user ,made user profile links,added update feature distributed ejs code in modulewise like for post , commnets  n all ,converted controller function in async await format by removeing call backs and handeled error using try catch block , and at last for user purpose made nofication system using flah middleware

--- a/assests/css/header.css
+++ b/assests/css/header.css
@@ -31,5 +31,5 @@ header ul li a {
   width: 30%;
   overflow: auto;
   text-align: justify;
-  background-color: blue;
+  background-color: pink;
 }
