--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -7,7 +7,7 @@
 <ul>
     <% if (locals.user){ %>
         <li>
-           <a href="/users/profile"><%=user.name %></a> 
+           <a href="/users/user_profile/<%= user.id%>"><%= user.name %></a> 
         </li>
           <li>
             <a href="/users/sign-out">Sign Out</a>
