--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -6,3 +6,13 @@
      <input type="submit" value="sign In">
       
 </form>
+
+
+<p>
+     <a href="/users/auth/google">Google sign In/Sign Up</a>
+</p>
+
+<p>
+     <a href="/users/forgot-password">Forgot password?</a>
+</p>
+
