--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,9 +1,9 @@
-<li>
+<li id="post-<%= post._id %>">
     <p>     
         
              <% if(locals.user && locals.user.id == post.user._id) {%>
             <small>
-                <a href="/posts/destroy/<%= post.id %>">X</a>
+                <a class="delete-post-button" href="/posts/destroy/<%= post.id %>">X</a>
             </small>
             <% } %>
 
@@ -12,12 +12,26 @@
      <small>
         <%= post.user.name %>
      </small>
+ <!-- CHANGE :: display the likes of this post, if the user is logged in, then show the link to toggle likes, else, just show the count -->
+ <br>
+ <!-- study about the data attribute -->
+       
+     <small>
+        <% if(locals.user){ %> 
+            <a href="/likes/toggle/?id=<%=post._id%>&type=Post" class="toggle-like-button"  data-likes="<%= post.likes.length %>">
+             <%= post.likes.length %> Likes
+            </a>
+            <%} else{ %>
+                       <%= post.likes.length %>Likes
+                <% } %>
+       </small>
+
     </p>
     <div class="post-comments">
         <% if(locals.user){%>
-             <form action="/comments/create" method="POST">
+             <form id="post-<%= post._id %>-comments-form" action="/comments/create"   method="POST">
                 <input type="text" name="content" placeholder="Type here to add comment..." required>
-                <input type="hidden" name="post" value="<%= post._id%>"> 
+                <input type="hidden" name="post" value="<%= post._id %>"> 
                 <input type="submit" value="Add comment">
              </form>
 
