--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -8,3 +8,10 @@
 <input type="password" name="confirm_password" placeholder="confirm password" required>
 <input type="submit" value="sign Up">
 </form>
+
+
+
+<p>
+    <a href="/users/auth/google">Google sign In/Sign Up</a>
+</p>
+
